[tool.poetry]
name = "test-stuff-repo"
version = "0.1.13"
description = ""
authors = ["Marco Acierno <marcoaciernoemail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopub]
git-username = "Hello"
git-email = "marcoaciernoemail@gmail.com"
append-github-contributor = true
